config/samples/gateway-backendtlspolicy.yaml
# BackendTLSPolicy: the Gateway serves plain HTTP, but Kong opens a TLS
# connection to the `goecho` Service and validates the certificate it presents
# against the CA in the referenced ConfigMap, expecting the name `goecho`.
#
# NOTE: when applied you'll be able to access the goecho service via the gateway with "goecho" hostname:
# curl -H "Host: goecho" $PROXY
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: goecho
  name: goecho
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goecho
  template:
    metadata:
      labels:
        app: goecho
    spec:
      containers:
      - env:
        - name: HTTPS_PORT
          value: "1028"
        - name: TLS_CERT_FILE
          value: /etc/certs/tls.crt
        - name: TLS_KEY_FILE
          value: /etc/certs/tls.key
        image: kong/go-echo:0.5.0
        imagePullPolicy: IfNotPresent
        name: goecho
        ports:
        - containerPort: 1028
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/certs
          name: certs
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: certs
        secret:
          secretName: goecho-tls
---
apiVersion: v1
kind: Service
metadata:
  name: goecho
spec:
  ports:
  - port: 1028
    protocol: TCP
    targetPort: 1028
  selector:
    app: goecho
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong
spec:
  controllerName: konghq.com/gateway-operator
  parametersRef:
    group: gateway-operator.konghq.com
    kind: GatewayConfiguration
    name: kong
    namespace: default
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong
spec:
  gatewayClassName: kong
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-1
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: kong
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: goecho
      port: 1028
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
